// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZonesView.vue renders snapshot when multizone 1`] = `
<div
  class="zones"
>
  <div
    class="kcard-stack"
  >
    <div
      class="kcard-border"
    >
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="k-button medium rounded primary refresh-button"
            data-testid="data-overview-refresh-button"
            type="button"
          >
            
            <span
              class="k-button-icon kong-icon kong-icon-redo"
            >
              <svg
                fill="white"
                height="16"
                role="img"
                viewBox="0 0 17 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Redo
                </title>
                
  
                <path
                  clip-rule="evenodd"
                  d="M12.466 12.06a6.868 6.868 0 112.196-5.676l.85-.85a.847.847 0 011.201-.017c.327.327.315.869-.017 1.2L14.233 9.18c-.342.342-.88.35-1.208.023L10.654 6.83c-.324-.324-.314-.859.028-1.2.34-.34.881-.348 1.2-.029l.847.846a4.938 4.938 0 10-1.63 4.245l1.367 1.367z"
                  fill="white"
                  fill-rule="evenodd"
                />
                

              </svg>
              

            </span>
            
            
             Refresh 
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <!-- data -->
          <div
            class="data-overview-table"
          >
            <div
              class="k-table-container data-overview-table"
              data-testid="data-overview-table"
              is-clickable=""
            >
              <!---->
              <section
                class="k-table-wrapper"
              >
                <table
                  class="k-table has-hover is-clickable"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                    >
                      
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Zone CP Version
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Storage type
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Ingress
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Egress
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class="sr-only"
                          >
                            Warnings
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody>
                    
                    <tr
                      class="is-selected"
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        
                        cluster-1
                        
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class="text-center"
                      >
                        
                        <span
                          class="mr-1 kong-icon kong-icon-warning"
                        >
                          <svg
                            height="20"
                            role="img"
                            version="1.1"
                            viewBox="0 0 48 42"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            
  
                            <title>
                              Warning
                            </title>
                            
  
                            <g
                              fill="var(--black-500)"
                              fill-rule="evenodd"
                              id="Page-1"
                              stroke="none"
                              stroke-width="1"
                            >
                              
    
                              <g
                                id="icn-warning-64x"
                              >
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                                  fill="var(--black-500)"
                                  fill-rule="nonzero"
                                  id="Triangle"
                                />
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                                  fill="var(--yellow-300)"
                                  fill-rule="nonzero"
                                  id="Path"
                                  type="secondary"
                                />
                                
      
                                <path
                                  d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                                  fill="var(--black-500)"
                                  id="!"
                                />
                                
    
                              </g>
                              
  
                            </g>
                            

                          </svg>
                          

                        </span>
                        
                      </td>
                      
                    </tr>
                    <tr
                      class=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        
                        zone-1
                        
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        Yes
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        Yes
                        
                      </td>
                      <td
                        class="text-center"
                      >
                        
                        <span
                          class="mr-1 kong-icon kong-icon-warning"
                        >
                          <svg
                            height="20"
                            role="img"
                            version="1.1"
                            viewBox="0 0 48 42"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            
  
                            <title>
                              Warning
                            </title>
                            
  
                            <g
                              fill="var(--black-500)"
                              fill-rule="evenodd"
                              id="Page-1"
                              stroke="none"
                              stroke-width="1"
                            >
                              
    
                              <g
                                id="icn-warning-64x"
                              >
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                                  fill="var(--black-500)"
                                  fill-rule="nonzero"
                                  id="Triangle"
                                />
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                                  fill="var(--yellow-300)"
                                  fill-rule="nonzero"
                                  id="Path"
                                  type="secondary"
                                />
                                
      
                                <path
                                  d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                                  fill="var(--black-500)"
                                  id="!"
                                />
                                
    
                              </g>
                              
  
                            </g>
                            

                          </svg>
                          

                        </span>
                        
                      </td>
                      
                    </tr>
                    <tr
                      class=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        
                        zone-2
                        
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class="text-center"
                      >
                        
                        <span
                          class="mr-1 kong-icon kong-icon-warning"
                        >
                          <svg
                            height="20"
                            role="img"
                            version="1.1"
                            viewBox="0 0 48 42"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            
  
                            <title>
                              Warning
                            </title>
                            
  
                            <g
                              fill="var(--black-500)"
                              fill-rule="evenodd"
                              id="Page-1"
                              stroke="none"
                              stroke-width="1"
                            >
                              
    
                              <g
                                id="icn-warning-64x"
                              >
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                                  fill="var(--black-500)"
                                  fill-rule="nonzero"
                                  id="Triangle"
                                />
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                                  fill="var(--yellow-300)"
                                  fill-rule="nonzero"
                                  id="Path"
                                  type="secondary"
                                />
                                
      
                                <path
                                  d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                                  fill="var(--black-500)"
                                  id="!"
                                />
                                
    
                              </g>
                              
  
                            </g>
                            

                          </svg>
                          

                        </span>
                        
                      </td>
                      
                    </tr>
                    <tr
                      class=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class=""
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        
                        zone-3
                        
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        1.0.0-rc2-211-g823fe8ce
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        memory
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class=""
                      >
                        
                        No
                        
                      </td>
                      <td
                        class="text-center"
                      >
                        
                        <span
                          class="mr-1 kong-icon kong-icon-warning"
                        >
                          <svg
                            height="20"
                            role="img"
                            version="1.1"
                            viewBox="0 0 48 42"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            
  
                            <title>
                              Warning
                            </title>
                            
  
                            <g
                              fill="var(--black-500)"
                              fill-rule="evenodd"
                              id="Page-1"
                              stroke="none"
                              stroke-width="1"
                            >
                              
    
                              <g
                                id="icn-warning-64x"
                              >
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                                  fill="var(--black-500)"
                                  fill-rule="nonzero"
                                  id="Triangle"
                                />
                                
      
                                <path
                                  d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                                  fill="var(--yellow-300)"
                                  fill-rule="nonzero"
                                  id="Path"
                                  type="secondary"
                                />
                                
      
                                <path
                                  d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                                  fill="var(--black-500)"
                                  id="!"
                                />
                                
    
                              </g>
                              
  
                            </g>
                            

                          </svg>
                          

                        </span>
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="kcard-border"
    >
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        
        <header
          class="tab__header"
        >
          
          <h1
            class="entity-heading"
          >
             Zone: cluster-1
          </h1>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
          >
            <ul
              aria-label="Tabs"
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="tab-item active"
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Overview
                  
                </div>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Zone Insights
                  
                </div>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                id="config-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Config
                  
                </div>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                id="warnings-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  <span
                    class="flex items-center with-warnings"
                  >
                    <span
                      class="mr-1 kong-icon kong-icon-warning"
                    >
                      <svg
                        height="16"
                        role="img"
                        version="1.1"
                        viewBox="0 0 48 42"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        
  
                        <title>
                          Warning
                        </title>
                        
  
                        <g
                          fill="var(--black-500)"
                          fill-rule="evenodd"
                          id="Page-1"
                          stroke="none"
                          stroke-width="1"
                        >
                          
    
                          <g
                            id="icn-warning-64x"
                          >
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                              fill="var(--black-500)"
                              fill-rule="nonzero"
                              id="Triangle"
                            />
                            
      
                            <path
                              d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                              fill="var(--yellow-300)"
                              fill-rule="nonzero"
                              id="Path"
                              type="secondary"
                            />
                            
      
                            <path
                              d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                              fill="var(--black-500)"
                              id="!"
                            />
                            
    
                          </g>
                          
  
                        </g>
                        

                      </svg>
                      

                    </span>
                    <span>
                      Warnings
                    </span>
                  </span>
                  
                </div>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              <section
                aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                class="kong-card noBorder"
              >
                <!---->
                <!---->
                <div
                  class="k-card-content d-flex"
                >
                  <div
                    class="k-card-body"
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  >
                    
                    
                    <dl
                      class="definition-list"
                    >
                      
                      
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Type
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          
                          ZoneOverview
                          
                          
                        </dd>
                      </div>
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Name
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          
                          cluster-1
                          
                          
                        </dd>
                      </div>
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Status
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          <div
                            class="k-badge d-inline-flex k-badge-success k-badge-rounded"
                            tabindex="0"
                          >
                            <div
                              class="k-badge-text truncate"
                            >
                              <div
                                class="k-badge-text truncate"
                              >
                                
                                online
                                
                              </div>
                            </div>
                            <!---->
                          </div>
                          
                        </dd>
                      </div>
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Authentication Type
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          
                          dpToken
                          
                          
                        </dd>
                      </div>
                      
                      
                    </dl>
                    
                    
                  </div>
                  <!---->
                </div>
              </section>
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="config-tab"
              class="tab-container"
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="warnings-tab"
              class="tab-container"
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`ZonesView.vue renders snapshot when no multizone 1`] = `
<div
  class="zones"
>
  <section
    class="empty-state-wrapper"
  >
    <div
      class="empty-state-title"
    >
      <!---->
      <div
        class="k-empty-state-title-header mt-4 mb-4"
      >
        
        <span
          class="mb-3 kong-icon kong-icon-dangerCircleOutline"
        >
          <svg
            fill="none"
            height="42"
            role="img"
            viewBox="0 0 17 17"
            width="42"
            xmlns="http://www.w3.org/2000/svg"
          >
            
  
            <title>
              Danger
            </title>
            
  
            <path
              clip-rule="evenodd"
              d="M16.5 8a8 8 0 11-16 0 8 8 0 0116 0zm-2 0a6 6 0 11-12 0 6 6 0 0112 0zm-7-3.5A.5.5 0 018 4h1a.5.5 0 01.5.5v4A.5.5 0 019 9H8a.5.5 0 01-.5-.5v-4zM8 10a.5.5 0 00-.5.5v1a.5.5 0 00.5.5h1a.5.5 0 00.5-.5v-1A.5.5 0 009 10H8z"
              fill="#A3BBCC"
              fill-rule="evenodd"
            />
            

          </svg>
          

        </span>
        <p>
          Kuma is running in Standalone mode.
        </p>
        
      </div>
    </div>
    <div
      class="empty-state-content"
    >
      <div
        class="k-empty-state-message mb-6"
      >
        
        <p>
           To access this page, you must be running in 
          <strong>
            Multi-Zone
          </strong>
           mode. 
        </p>
        
      </div>
      <div
        class="k-empty-state-cta"
      >
        
        <a
          class="k-button medium rounded primary"
          href="https://kuma.io/docs/1.7.x/documentation/deployments/?utm_source=Kuma&utm_medium=Kuma"
          target="_blank"
          type="button"
        >
          
          <!---->
          
          
           Learn More 
          
          <!---->
        </a>
        
      </div>
    </div>
  </section>
</div>
`;

exports[`ZonesView.vue renders zone insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  
  <header
    class="tab__header"
  >
    
    <h1
      class="entity-heading"
    >
       Zone: cluster-1
    </h1>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
    >
      <ul
        aria-label="Tabs"
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Overview
            
          </div>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="tab-item active"
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Zone Insights
            
          </div>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          id="config-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Config
            
          </div>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          id="warnings-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            <span
              class="flex items-center with-warnings"
            >
              <span
                class="mr-1 kong-icon kong-icon-warning"
              >
                <svg
                  height="16"
                  role="img"
                  version="1.1"
                  viewBox="0 0 48 42"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  
  
                  <title>
                    Warning
                  </title>
                  
  
                  <g
                    fill="var(--black-500)"
                    fill-rule="evenodd"
                    id="Page-1"
                    stroke="none"
                    stroke-width="1"
                  >
                    
    
                    <g
                      id="icn-warning-64x"
                    >
                      
      
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                        fill="var(--black-500)"
                        fill-rule="nonzero"
                        id="Triangle"
                      />
                      
      
                      <path
                        d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                        fill="var(--yellow-300)"
                        fill-rule="nonzero"
                        id="Path"
                        type="secondary"
                      />
                      
      
                      <path
                        d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                        fill="var(--black-500)"
                        id="!"
                      />
                      
    
                    </g>
                    
  
                  </g>
                  

                </svg>
                

              </span>
              <span>
                Warnings
              </span>
            </span>
            
          </div>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="kong-card noBorder"
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
          >
            <div
              class="k-card-body"
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              
              <ul
                class="accordion-list"
              >
                
                
                <li
                  class="accordion-item active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                    data-testid="accordion-item-button"
                    type="button"
                  >
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-500"
                      >
                         Connect time: February 19, 2021 at 7:11:15 AM
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <div
                      class="accordion-item-content"
                      data-testid="accordion-item-content"
                    >
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <dl
                            class="definition-list"
                          >
                            
                            <div
                              class="definition-list-item"
                            >
                              <dt
                                class="definition-list-item__term"
                              >
                                Global instance ID
                              </dt>
                              <dd
                                class="definition-list-item__details"
                              >
                                
                                MacBook-Pro-Bartlomiej.local-9e52
                                
                              </dd>
                            </div>
                            <!--v-if-->
                            <div
                              class="definition-list-item"
                            >
                              <dt
                                class="definition-list-item__term"
                              >
                                Last connected
                              </dt>
                              <dd
                                class="definition-list-item__details"
                              >
                                
                                February 19, 2021
                                
                              </dd>
                            </div>
                            <!--v-if-->
                            
                          </dl>
                        </div>
                        <div
                          class="columns mt-4"
                          style="--columns: 4;"
                        >
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              CircuitBreaker: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              Config: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              Dataplane: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              ExternalService: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              FaultInjection: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              HealthCheck: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              Mesh: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              ProxyTemplate: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              Retry: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              Secret: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              TrafficLog: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              TrafficPermission: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              TrafficRoute: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              TrafficTrace: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  1
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                <li
                  class="accordion-item"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-item-header"
                    data-testid="accordion-item-button"
                    type="button"
                  >
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-500"
                      >
                         Connect time: July 28, 2020 at 4:18:09 PM
                      </span>
                      <span
                        class="ml-4 color-red-600"
                      >
                         Disconnect time: July 28, 2020 at 4:18:09 PM
                      </span>
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <!--v-if-->
                  </transition-stub>
                </li>
                
                
              </ul>
              
              
            </div>
            <!---->
          </div>
        </section>
        
      </div>
      <div
        aria-labelledby="config-tab"
        class="tab-container"
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="warnings-tab"
        class="tab-container"
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
  </div>
  
</div>
`;
